FINAL (Back buttons, index buttons, minor fixes)

--- a/prac1/gotapi/templates/castlepage.html
+++ b/prac1/gotapi/templates/castlepage.html
@@ -11,5 +11,6 @@
 <p>Description: 
 {{contentbody2}}
 </p>
+<input type="button" value="Torna a l'índex de Castells" onClick= location.href="/castles/" />
 </body>
 </html>
