--- a/prac1/gotapi/templates/characterpage.html
+++ b/prac1/gotapi/templates/characterpage.html
@@ -13,5 +13,6 @@
 <p>Dead?
 {{contentbody3}}
 </p>
+<input type="button" value="Torna a l'índex de Personatges" onClick= location.href="/characters/" />
 </body>
 </html>
