--- a/prac1/gotapi/templates/housepage.html
+++ b/prac1/gotapi/templates/housepage.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>{{ pagetitle }}</h1>
-<ol>
+<ol>		<p>Castles:</p>
 		{% for i in contentbody2 %}
 		
 		<li>
@@ -15,5 +15,6 @@
 		</li>
 		{% endfor %}
 		</ol>
+<input type="button" value="Torna a l'índex de Cases" onClick= location.href="/houses/" />
 </body>
 </html>
