Autocomplete JSON, User Registration and Readme refresh

--- a/prac1/gotapi/templates/characterpage.html
+++ b/prac1/gotapi/templates/characterpage.html
@@ -10,8 +10,11 @@
 <p>Place:
 <input type="button" value="{{contentbody2.name}}" onClick= location.href="/places/{{contentbody2.id}}/" />
 </p>
+<p>Civil Status:
+{{contentbody3.name}}
+</p>
 <p>Dead?
-{{contentbody3}}
+{{contentbody4}}
 </p>
 <input type="button" value="Torna a l'índex de Personatges" onClick= location.href="/characters/" />
 </body>
