--- a/prac1/gotapi/templates/mainpage.html
+++ b/prac1/gotapi/templates/mainpage.html
@@ -10,9 +10,19 @@
 		<title>{{ titlehead}}</title>
 	</head>
 	<body>
-		
-			<p>Benvingut {{ user.username }}!
+		{% if user.username %}
+		<p>Benvingut {{ user.username }}!
 			Aquí podrà gestionar els seus personatges favorits!</p>
+		{% else %}
+		
+		<p>No estas loguejat:
+		Obligatori fer <input type="button" value="Login" onClick= location.href="/login/" />
+		per modificar personatges.</p>
+
+		<p>No estas registrat? <input type="button" value="Registra't" onClick= location.href="/register/" />
+		per modificar personatges.</p>
+		{% endif %}
+		
 <h1>{{ pagetitle }}</h1>
 		<p>{{ contentbody }}</p>
 		
@@ -31,7 +41,6 @@
 		<p>Llista de Llocs:
 		<input type="button" value="Llista de Llocs" onClick= location.href="/places/" />
 		</p>
-		
 		
 
 	</body>
