User create/delete instances, autocomplete external, minor fixes

--- a/prac1/gotapi/templates/characterpage.html
+++ b/prac1/gotapi/templates/characterpage.html
@@ -11,7 +11,7 @@
 <input type="button" value="{{contentbody2.name}}" onClick= location.href="/places/{{contentbody2.id}}/" />
 </p>
 <p>Civil Status:
-{{contentbody3.name}}
+{{contentbody3}}
 </p>
 <p>Dead?
 {{contentbody4}}
