--- a/prac1/gotapi/templates/mainpage.html
+++ b/prac1/gotapi/templates/mainpage.html
@@ -22,6 +22,12 @@
 		<p>No estas registrat? <input type="button" value="Registra't" onClick= location.href="/register/" />
 		per modificar personatges.</p>
 		{% endif %}
+
+		<p>Diga'ns d'on ets! 
+		<input type="button" value="Registra la meva ciutat" onClick= location.href="/realplaces/create" />
+		<input type="button" value="Mira d'on ens visiten" onClick= location.href="/realplaces/" />
+		</p>
+		
 		
 <h1>{{ pagetitle }}</h1>
 		<p>{{ contentbody }}</p>
