--- a/prac1/gotapi/templates/placespage.html
+++ b/prac1/gotapi/templates/placespage.html
@@ -10,7 +10,7 @@
 		<li>
 		{{i.name}}
 		<input type="button" value="+Detalls" onClick= location.href="/places/{{i.id}}/" />
-		{% if user.username %}
+		{% if user == i.user %}
 		<input type="button" value="Edit" onClick= location.href="/places/{{i.id}}/edit" />
 		<input type="button" value="Delete" onClick= location.href="/places/{{i.id}}/delete" />		
 		{% endif %}
