--- a/prac1/gotapi/templates/characterpage.html
+++ b/prac1/gotapi/templates/characterpage.html
@@ -1,21 +1,74 @@
 <html>
-<head>
-<title>{{ titlehead}}</title>
-</head>
-<body>
-<h1>{{ pagetitle }}</h1>
-<p>House:
-<input type="button" value="{{contentbody1.name}}" onClick= location.href="/houses/{{contentbody1.id}}/" />
-</p>
-<p>Place:
-<input type="button" value="{{contentbody2.name}}" onClick= location.href="/places/{{contentbody2.id}}/" />
-</p>
-<p>Civil Status:
-{{contentbody3}}
-</p>
-<p>Dead?
-{{contentbody4}}
-</p>
-<input type="button" value="Torna a l'índex de Personatges" onClick= location.href="/characters/" />
-</body>
+  <head>
+		<title>{{ titlehead}}</title>
+	</head>
+
+
+  <span vocab="http://schema.org/" typeof="Person">
+    <p>Name:<span property="name">{{pagetitle}}</span></p>
+    <p>House:<span property="familyName"><input type="button" value="{{contentbody1.name}}" onClick= location.href="/houses/{{contentbody1.id}}/" /></span></p>
+     <p>Place:<span property="address"><input type="button" value="{{contentbody2.name}}" onClick= location.href="/places/{{contentbody2.id}}/" /></span></p>
+  </span> 
+	<body>
+		
+		<p>Civil Status:
+		{{contentbody3}}
+		</p>
+		<p>Dead?
+		{{contentbody4}}
+		</p>
+		<input type="button" value="Torna a l'índex de Personatges" onClick= location.href="/characters/" />
+	</body>
+
+<h2>Reviews</h2>
+  {% if character.characterreview_set.all|length > 0 %}
+    <span rel="aggregateRating">
+      <p typeof="AggregateRating">
+      Average rating
+      <span property="ratingValue">{{ character.averageRating|stringformat:".1f" }}</span>
+      {% with character.characterreview_set.all|length as reviewCount %} 
+      from
+       <span property="reviewCount">{{ reviewCount }}</span> 
+      review{{ reviewCount|pluralize }}
+      {% endwith %}
+      </p>
+    </span>
+
+
+  <ul rel="review">
+  {% for review in character.characterreview_set.all %}
+  <li typeof="Review">
+    <p rel="reviewRating" typeof="Rating">
+    <span property="worstRating" content="{{ RATING_CHOICES.0.0 }}"></span>
+    <span property="ratingValue">{{ review.rating }}</span>
+    star{{ review.rating|pluralize }}
+    {% with RATING_CHOICES|last as best %}
+    <span property="bestRating" content="{{ best.0 }}"></span>
+    {% endwith %}
+    </p>
+    <p property="description">{{ review.comment }}</p>
+    <p>Created by <span property="author">{{ review.user }}</span> on
+    <span property="publishDate">{{ review.date}}</span></p>
+  </li>
+  {% endfor %}
+  </ul>
+  </span>
+  {% endif %}
+
+
+{% if user.username %}
+  <h3>Add Review</h3>
+    <form action="/characters/{{character.id}}/reviews/create/" method="post">
+    {% csrf_token %} Message: <textarea name="comment" id="comment" rows="4"></textarea>
+    <p>Rating:</p>
+    <p>{% for rate in RATING_CHOICES %}
+      <input type="radio" name="rating" id="rating{{ forloop.counter }}" value="{{ rate.1}}" />
+      <label for="choice{{ forloop.counter }}">{{ rate.1}} star{{ rate.0|pluralize }}</label>
+      <br/>
+    {% endfor %}
+    </p>
+    <input type="submit" value="Review" />
+    </form>
+{% endif %} 
+
 </html>
